--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,8 @@ default: all
 # this would be a good place to add your tests
 all: test1 test2 test3 buffer sieve
 
+test: queuetest
+
 # running "make clean" will remove all files ignored by git.  To ignore more
 # files, you should add them to the file .gitignore
 clean:
