--- a/src/.gitignore
+++ b/src/.gitignore
@@ -21,6 +21,11 @@ network_send_test
 network_send_test2
 network_send_test3
 network_forward
+alarmtest1
+alarmtest2
+conn-network1
+conn-network2
+conn-network3
 .depend
 *.o
 
