fixed compile errors

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,7 @@ OBJ =                              \
     pqueue.o                       \
     multilevel_queue.o             \
     synch.o                        \
+	stream.o                       \
     miniheader.o                   \
     minimsg.o                      \
     minisocket.o                   \
