changed lru to cache

--- a/src/Makefile
+++ b/src/Makefile
@@ -40,6 +40,8 @@ OBJ =                              \
     read.o                         \
     stream.o                       \
     state.o                        \
+    hashtable.o                    \
+    cache.o                        \
     miniheader.o                   \
     minimsg.o                      \
     minisocket.o                   \
