fixed some code

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ default: all
 #    necessary PortOS code.
 #
 # this would be a good place to add your tests
-all: test1 test2 test3 buffer sieve mqueue_test queue_test pqueue_test test_int test_alarm network1 network2 network3 network4 network5 network6 network_port_stress_test network_load_test network_send_test network_send_test2 network_send_test3 network_forward alarmtest1 alarmtest2 conn-network1 conn-network2 conn-network3 handshake conn-network4 conn-network5 messenger
+all: test1 test2 test3 buffer sieve mqueue_test queue_test pqueue_test test_int test_alarm network1 network2 network3 network4 network5 network6 network_port_stress_test network_load_test network_send_test network_send_test2 network_send_test3 network_forward alarmtest1 alarmtest2 conn-network1 conn-network2 conn-network3 handshake conn-network4 conn-network5 messenger cache_test
 
 # running "make clean" will remove all files ignored by git.  To ignore more
 # files, you should add them to the file .gitignore
