--- a/src/Makefile
+++ b/src/Makefile
@@ -47,6 +47,7 @@ OBJ =                              \
     minisocket.o                   \
     miniroute.o                    \
     disk.o                         \
+    reqmap.o                       \
     minifile.o                     \
     network.o
 
