added hash library

--- a/src/Makefile
+++ b/src/Makefile
@@ -31,6 +31,7 @@ OBJ =                              \
     machineprimitives.o            \
     machineprimitives_x86_64.o     \
     machineprimitives_x86_64_asm.o \
+    uthash.o                       \
     random.o                       \
     alarm.o                        \
     queue.o                        \
